--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
+
 {
   "rewrites": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/sitemap.xml"
+    },
+    {
+      "source": "/robots.txt",
+      "destination": "/robots.txt"
+    },
     {
       "source": "/((?!.*\\.).*)",
       "destination": "/index.html"
